# acme

./: .gitignore  .gitmodules  ACME.mltbx  ACME.prj  CMakeCache.txt  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists.txt  CMakeUtilities.txt  Doxyfile  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  README_doxygen.md  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  cmake_install.cmake
copy/: acme.hh  acme.inl  acme_math.hh  acme_nd.hh
deprecated/: acme_point3.hh  acme_rotation3.hh  acme_vector3.hh
doc/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_0x7e.html  functions_b.html  functions_c.html  functions_d.html  functions_func.html  functions_func_0x7e.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_i.html  functions_func_l.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_q.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_v.html  functions_func_x.html  functions_func_y.html  functions_func_z.html  functions_i.html  functions_l.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_v.html  functions_vars.html  functions_x.html  functions_y.html  (+53 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  (+17 more)
doclatex/: annotated.tex  hierarchy.tex  namespaces.tex  refman.tex
docs/: .buildinfo  Manual_Features.html  Manual_Index.html  Manual_MATLAB_Toolbox.html  Manual_Readme.html  Manual_matlab.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  features.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_i.html  functions_func_j.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_v.html  functions_func_x.html  functions_func_y.html  functions_func_z.html  functions_func_~.html  (+31 more)
docs/_static/: alabaster.css
docs/api-cpp/: class_a00069.html  class_a00073.html  class_a00077.html  class_a00081.html  class_a00085.html  class_a00089.html  class_a00093.html  class_a00097.html  class_a00101.html  class_a00105.html  class_a00109.html  class_a00113.html  class_a00117.html  class_a00129.html  class_a00133.html  class_a00137.html  class_a00141.html  class_a00145.html  class_a00149.html  class_a00153.html  class_a00157.html  class_a00161.html  class_a00165.html  class_a00169.html  class_a00173.html  class_a00177.html  class_view_hierarchy.html  define_a00002_1a0a5ceb9ceb914e08d345410b561cb37a.html  define_a00002_1a4e071e9b33386a9a652f019d24f54ff8.html  define_a00002_1ac307767302b70c544756dce2fc98c067.html  define_a00002_1ae07d613b9140034699328bc954b3f038.html  define_a00005_1a0a5ceb9ceb914e08d345410b561cb37a.html  define_a00005_1a7a7deaed538001d5be6341eda3dc58e5.html  define_a00008_1a4e071e9b33386a9a652f019d24f54ff8.html  define_a00008_1a9fffd9d9d9766eb7f1d2302237994cbc.html  define_a00008_1ae07d613b9140034699328bc954b3f038.html  define_a00011_1a0a5ceb9ceb914e08d345410b561cb37a.html  define_a00011_1a5da68e0fc3f7b756afb41017a5ef653f.html  define_a00014_1a0a5ceb9ceb914e08d345410b561cb37a.html  (+1097 more)
docs_build/: Doxyfile  Makefile  project_common.py
include/: acme.hh  acme_AABBtree.hh  acme_aabb.hh  acme_ball.hh  acme_box.hh  acme_circle.hh  acme_collection.hh  acme_collinear.hh  acme_coplanar.hh  acme_eigen.hh  acme_entity.hh  acme_frame.hh  acme_intersect.hh  acme_intersection.hh  acme_line.hh  acme_math.hh  acme_none.hh  acme_orthogonal.hh  acme_parallel.hh  acme_plane.hh  acme_point.hh  acme_ray.hh  acme_segment.hh  acme_sphere.hh  acme_triangle.hh  acme_utilities.hh  acme_utils.hh  acme_vector_point.hh
old/: acme.cc  acme_duplicates.hh  acme_math.hh  acme_matrix.cc  acme_matrix.hh  acme_nd.hh  acme_utilities.hh
src/: TicToc.hh  acme.cc  acme.hh  acme.inl  acme_AABBtree.cc  acme_AABBtree.hh  acme_aabb.cc  acme_box.cc  acme_box.hh  acme_box3.hh  acme_circle.cc  acme_circle.hh  acme_circle3.hh  acme_collection.cc  acme_collinear.cc  acme_coplanar.cc  acme_eigen.cc  acme_entity.cc  acme_frame.cc  acme_frame.hh  acme_frame3.hh  acme_instantiate.hh  acme_intersect.cc  acme_intersect.hh  acme_intersect3.hh  acme_intersection.cc  acme_line.cc  acme_line.hh  acme_line3.hh  acme_math.cc  acme_math.hh  acme_math.inl  acme_nd.cc  acme_nd.hh  acme_nd.inl  acme_orthogonal.cc  acme_parallel.cc  acme_plane.cc  acme_plane.hh  acme_plane3.hh  (+56 more)
submodules/: rakefile
tests/: acme-test0.cc  acme-test1.cc  acme-test10.cc  acme-test11.cc  acme-test12.cc  acme-test13.cc  acme-test14.cc  acme-test15.cc  acme-test16.cc  acme-test17.cc  acme-test18.cc  acme-test2.cc  acme-test3.cc  acme-test4.cc  acme-test5.cc  acme-test6.cc  acme-test7.cc  acme-test8.cc  acme-test9.cc  acme_build.cc  acme_test_00.cc  acme_test_01.cc  acme_test_02.cc  acme_test_03.cc  acme_test_04.cc  acme_test_05.cc  acme_test_06.cc  acme_test_07.cc  acme_test_08.cc  acme_test_09.cc  acme_test_10.cc  acme_test_11.cc  acme_test_12.cc  acme_test_13.cc  acme_test_14.cc  acme_test_15.cc  acme_test_16.cc  acme_test_17.cc  acme_test_18.cc  geometry_test1.cc  (+25 more)
toolbox/: CMakeLists.txt  CompileACMElib.m  compileACMElib.m  demos.xml  populate_toolbox.rb
(+4387 files in other folders)
